# cpp-match

./: .caf_config  .caf_config_match  .clang-format  .gitignore  README.md  WORKSPACE  compile_commands.json  global_copts.bzl
.devcontainer/: Dockerfile  devcontainer.json
actor/: BUILD  actor.cpp  class-perf.cpp  class.cpp
actor-examples/: README.md  class-perf.caf
actor-match/: BUILD  BUILD.bazel  README.md  actor_types.h  main.cpp  match_config.caf  order_book_actor.h  router_actor.h
actor-match/actors/: order_book.h
common/: BUILD  BUILD.bazel  common.cpp  common.h  histogram.h  stopwatch.h
common/model/: order.cpp  order.h  order_factory.h
darkpool/: BUILD  main.cc
darkpool-test/: BUILD  order_generator.cc  order_generator.h  test_order.cc  test_order_semantics.cc  test_order_semantics.h
darkpool/config/: config.h
darkpool/engine/: darkpool_service.cc  darkpool_service.h  matching_engine.cc  matching_engine.h  order_book.cc  order_book.h
darkpool/engine/order_provider/: filename_stream_order_provider.cc  order_provider.h  (+2 more)
match/: BUILD
match-engine/: BUILD  BUILD.bazel  README.md  main.cc  main.cpp
match-engine-test/: BUILD.bazel  README.md  order_generator.cc  order_generator.h  test_order.cc  test_order_semantics.cc  test_order_semantics.h
match-engine/engine/: matching_engine.h  order_book.cc  order_book.h
match-engine/model/: order.cpp
match/model/: order.h  order_factory.h
sample-input/: gemini-orders.txt
scripts/: gen-data.sh
util/: BUILD  cppversion.cpp  flip.cpp  format.cpp  scratch.cpp  set.cpp  sum.cpp  traversal.cpp
(+9 files in other folders)
